2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeDnd.xs: Change the wrapper for
	gtk_tree_drag_source_drag_data_get so it also accepts a selection
	data object that is to be filled in, instead of always just
	returning a new one.  Patch by Kevin Ryde.

	* t/GtkTreeView.t: Use separately created tree views for certain
	parts of the test.  Properly test set_search_equal_func and
	set_search_position_func.  Make the tests for the coordinate
	converters and for the tooltip stuff more robust.

	* xs/GtkWindow.xs: Use Gtk2::Widget::hide_on_delete in the POD.
	Patch by Kevin Ryde.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.191.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkColorSelectionDialog.xs:
	gtk_color_selection_dialog_get_color_selection is broken
	currently, so make its use depend on gtk+ >= 2.13.7 (i.e. the next
	version).  (See GNOME bug #548346)

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Provide Gtk2::TreeIter::set for custom model
	implementations to set the contents of an iter.  Patch by Kevin Ryde.

2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkItemFactory.t: Fix test failures.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_hide_on_delete.

	* xs/GtkWindow.xs: Fix small error in the description POD section.
	Patch by Kevin Ryde.

	* t/GtkScaleButton.t
	* xs/GtkScaleButton.xs: Wrap gtk_scale_button_set_orientation and
	gtk_scale_button_get_orientation.

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Fix the gtk_plug_new_for_display wrapper so it is
	callable as Gtk2::Plug->new_for_display(display, socket_id).  For
	backwards compatibility, also allow
	Gtk2::Plug::new_for_display(display, socket_id).

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Wrap gtk_plug_get_embedded and
	gtk_plug_get_socket_window.

	* t/GtkMessageDialog.t
	* xs/GtkMessageDialog.xs: Wrap gtk_message_dialog_get_image.

	* t/GtkMenuItem.t