@@ -5,7 +5,8 @@
 use Gtk2::TestHelper
 	at_least_version => [2, 4, 0, 'GtkFileChooser is new in 2.4'],
 	tests => 42,
-	skip_all => 'unreliable GtkFileChooser test';
+	skip_all => 'this test is unreliable',
+	;
 use File::Spec;
 use Cwd;
 
